--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "export": "next build"
   },
   "dependencies": {
-    "lucide-react": "^0.263.1",
-    "next": "^16.1.6",
+    "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.263.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
