--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "export": "next build"
   },
   "dependencies": {
-    "next": "^14.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "lucide-react": "^0.263.1",
+    "next": "^16.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.3.3"
   }
 }
