--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.263.1",
     "next": "^16.1.6",
     "react": "^18.2.0",
